Tested the Change
Changed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Gameforest - Responsive Gaming HTML Theme</title>
+	<title>Home :: GasBros Gaming Network</title>
 	
 	<!-- FAVICON -->
 	<link rel="shortcut icon" href="img/favicon.ico">
