--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="nav-control">
 					<ul>
 						<li class="dropdown">
-							<a href="#" class="dropdown-toggle">Home</a>
+							<a href="#" class="#">Home</a>
 						</li>
 						<li class="dropdown mega-dropdown">
 							<a href="games.html">Games</a>
