--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 			<nav>
 				<div class="nav-control">
 					<ul>
-				        <a href="#" class="#">Home</a>
-						</li>
-						<li class="dropdown mega-dropdown">
+						<li><a href="index.html">Home</a></li>
+                        <li class="dropdown mega-dropdown">
 							<a href="games.html">Games</a>
 							<ul class="dropdown-menu mega-dropdown-menu category">
 								<li class="col-md-3">
