--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
 		<div class="container">
 			<div class="widget row">
 				<div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
-					<h4 class="title">About GameForest</h4>
+					<h4 class="title">About GGN</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pharetra mattis arcu, a congue leo malesuada eu. Nam nec mauris ut odio tristique varius et eu metus. Quisque massa purus, aliquet quis blandit et, <br /> <br />mollis sed lorem. Sed vel tincidunt elit. Phasellus at varius odio, sit amet fermentum mauris.</p>
 				</div>
 					
@@ -741,7 +741,7 @@
 								<li><a href="#">Playstation 4</a></li>
 								<li><a href="#">XBOX ONE</a></li>
 								<li><a href="#">PC</a></li>
-								<li><a href="#">PS3</a></li>
+								<li><a href="#">Nintendo Swtich</a></li>
 							</ul>
 						</div>
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -769,12 +769,13 @@
 		<div class="footer-bottom">
 			<div class="container">	
 				<ul class="list-inline">
-					<li><a href="#" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Follow us on Twitter"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Follow us on Facebook"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Follow us on Google"><i class="fa fa-google-plus"></i></a></li>
+					<li><a href="www.twitter.com/gasbrosgn" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Follow us on Twitter"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="www.facebook.com/gasbrosgn" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Like and Follow us on Facebook"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="www.google.com/gasbrosgamingnetwork" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Follow us on Google"><i class="fa fa-google-plus"></i></a></li>
 					<li><a href="#" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Follow us on Steam"><i class="fa fa-steam"></i></a></li>
+                    <li><a href="www.instagram.com/gasbrosgamingnetwork" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Follow us on instagram"><i class="fa fa-instagram"></i></a></li>
 				</ul>
-				&copy; 2016 Gameforest. All rights reserved.
+				&copy; 2016 GasBros Gaming Network. All rights reserved.
 			</div>
 		</div>
 	</footer>	
