Xbox tab to Mobile
Changed the Xbox tab to Mobile

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 							</ul>
 						</li>
 						<li class="dropdown mega-dropdown">
-							<a href="games.html">Xbox</a>
+							<a href="games.html">Mobile</a>
 							<ul class="dropdown-menu mega-dropdown-menu category">
 								<li class="col-md-3">
 									<a href="games-single.html">
