Tweets and PAge
Added and fixed the twitter

--- a/index.html
+++ b/index.html
@@ -845,8 +845,9 @@
 							</ul>
 						</div>		
 						<div class="widget">
-							<div class="title">Tweets</div>
+							<div class="title">Become Fan of GGN</div>
 							<div id="twitter" data-twitter="346548853320851456"></div>
+							<a href="https://twitter.com/GasBrosGaming" class="twitter-follow-button" data-show-count="false">Follow @GasBrosGaming </a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 						</div>
 					</div>
 				</div>
