more changes and updated the links
Youtube and more

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 										<div class="meta"><a href="games-single.html"><i class="fa fa-heart-o"></i> <span>15</span></a></div>
 									</div>
 									<div class="caption">
-										<h3 class="card-title"><a href="games-single.html">Grand Theft Auto 5</a></h3>
+										<h3 class="card-title"><a href="games-single.html">Data Miners Find Aliens in Grand Theft Auto 5</a></h3>
 										<ul>
 											<li><i class="fa fa-clock-o"></i> April 14, 2016</li>
 											<li><i class="fa fa-eye"></i> 1230 views</li>
@@ -725,36 +725,36 @@
 								<li>
 									<a href="#" class="thumb"><img src="img/blog/xs/1.jpg" alt=""></a>
 									<div class="widget-list-meta">
-										<h4 class="widget-list-title"><a href="#">Overwatch Closed Beta</a></h4>
-										<p><i class="fa fa-clock-o"></i> September 15, 2015</p>
+										<h4 class="widget-list-title"><a href="#">Top 3 ISPs to use for gaming in Ghana</a></h4>
+										<p><i class="fa fa-clock-o"></i> September 15, 2017</p>
 									</div>
 								</li>
 								<li>
 									<a href="#" class="thumb"><img src="img/blog/xs/2.jpg" alt=""></a>
 									<div class="widget-list-meta">
-										<h4 class="widget-list-title"><a href="#">Blood and Gore</a></h4>
-										<p><i class="fa fa-clock-o"></i> September 13, 2015</p>
+										<h4 class="widget-list-title"><a href="#">Gaming Slang in Ghana</a></h4>
+										<p><i class="fa fa-clock-o"></i> September 13, 2017</p>
 									</div>
 								</li>
 								<li>
 									<a href="#" class="thumb"><img src="img/blog/xs/3.jpg" alt=""></a>
 									<div class="widget-list-meta">
-										<h4 class="widget-list-title"><a href="#">Warner Bros. Interactive</a></h4>
+										<h4 class="widget-list-title"><a href="#">Xbox,PS or Nintendo who has the Ghanaian Market</a></h4>
 										<p><i class="fa fa-clock-o"></i> September 12, 2015</p>
 									</div>
 								</li>
 								<li>
 									<a href="#" class="thumb"><img src="img/blog/xs/4.jpg" alt=""></a>
 									<div class="widget-list-meta">
-										<h4 class="widget-list-title"><a href="#">Sharks Don't Sleep</a></h4>
-										<p><i class="fa fa-clock-o"></i> September 10, 2015</p>
+										<h4 class="widget-list-title"><a href="#">Gaming in Ghana 101</a></h4>
+										<p><i class="fa fa-clock-o"></i> September 10, 2017</p>
 									</div>
 								</li>
 								<li>
 									<a href="#" class="thumb"><img src="img/blog/xs/5.jpg" alt=""></a>
 									<div class="widget-list-meta">
 										<h4 class="widget-list-title"><a href="#">GTA 5 Reaches 5 Million</a></h4>
-										<p><i class="fa fa-clock-o"></i> September 10, 2015</p>
+										<p><i class="fa fa-clock-o"></i> September 10, 2017</p>
 									</div>
 								</li>
 							</ul>
@@ -764,11 +764,27 @@
 							<div class="title">Recommended Videos</div>
 							<div class="card card-video">
 								<div class="card-img">
-									<a href="videos-single.html"><img src="http://i1.ytimg.com/vi/jhv3Jq6O-nw/mqdefault.jpg" alt=""></a>
-									<div class="time">04:51</div>
+								<iframe width="320" height="180" src="https://www.youtube.com/embed/IRCD-ItDNVQ" frameborder="0" allowfullscreen></iframe>
+									<!--<a href="videos-single.html"><img src="http://i1.ytimg.com/vi/jhv3Jq6O-nw/mqdefault.jpg" alt=""></a> -->
+									
+									<div class="time">01:58</div>
 								</div>
 								<div class="caption">
-									<h3 class="card-title"><a href="videos-single.html">Call of Duty Black Ops 3</a></h3>
+									<h3 class="card-title"><a href="videos-single.html">Watch Dogs 2: 4 Player Party Mode Free Update</a></h3>
+									<ul>
+										<li><i class="fa fa-clock-o"></i> July 3, 2017</li>
+										<li><i class="fa fa-eye"></i> 1500 views</li>
+									</ul>
+								</div>
+							</div>
+							<div class="card card-video">
+								<div class="card-img">
+									<!--<a href="videos-single.html"><img src="http://i1.ytimg.com/vi/6vxWoyIjuJA/mqdefault.jpg" alt=""></a>-->
+									<iframe width="320" height="180" src="https://www.youtube.com/embed/K4zm30yeHHE" frameborder="0" allowfullscreen></iframe>
+									<div class="time">06:33</div>
+								</div>
+								<div class="caption">
+									<h3 class="card-title"><a href="videos-single.html">Marvel's Spider-Man (PS4) 2017 E3 Gameplay</a></h3>
 									<ul>
 										<li><i class="fa fa-clock-o"></i> April 13, 2016</li>
 										<li><i class="fa fa-eye"></i> 1500 views</li>
@@ -777,24 +793,12 @@
 							</div>
 							<div class="card card-video">
 								<div class="card-img">
-									<a href="videos-single.html"><img src="http://i1.ytimg.com/vi/6vxWoyIjuJA/mqdefault.jpg" alt=""></a>
+									<!--<a href="videos-single.html"><img src="http://i1.ytimg.com/vi/g7d9KM1plyg/mqdefault.jpg" alt=""></a>-->
+									<iframe width="320" height="180" src="https://www.youtube.com/embed/7yaOYpTQLWM" frameborder="1" allowfullscreen></iframe>
 									<div class="time">06:33</div>
 								</div>
 								<div class="caption">
-									<h3 class="card-title"><a href="videos-single.html">The Witcher 3: Wild Hunt</a></h3>
-									<ul>
-										<li><i class="fa fa-clock-o"></i> April 13, 2016</li>
-										<li><i class="fa fa-eye"></i> 1500 views</li>
-									</ul>
-								</div>
-							</div>
-							<div class="card card-video">
-								<div class="card-img">
-									<a href="videos-single.html"><img src="http://i1.ytimg.com/vi/g7d9KM1plyg/mqdefault.jpg" alt=""></a>
-									<div class="time">06:33</div>
-								</div>
-								<div class="caption">
-									<h3 class="card-title"><a href="videos-single.html">The Witcher 3: Wild Hunt</a></h3>
+									<h3 class="card-title"><a href="videos-single.html">Marvel Heroes Omega - Xbox One Launch Trailer</a></h3>
 									<ul>
 										<li><i class="fa fa-clock-o"></i> April 13, 2016</li>
 										<li><i class="fa fa-eye"></i> 1500 views</li>
