--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 										<div class="meta"><a href="games-single.html"><i class="fa fa-heart-o"></i> <span>6</span></a></div>
 									</div>
 									<div class="caption">
-										<h3 class="card-title"><a href="games-single.html">Witcher 3 Limited Edition</a></h3>
+										<h3 class="card-title"><a href="games-single.html">'Minecraft' looks like a completely different game in 4K</a></h3>
 										<ul>
 											<li><i class="fa fa-clock-o"></i> April 12, 2016</li>
 											<li><i class="fa fa-eye"></i> 570 views</li>
@@ -641,7 +641,7 @@
 										<div class="meta"><a href="games-single.html"><i class="fa fa-heart-o"></i> <span>12</span></a></div>
 									</div>
 									<div class="caption">
-										<h3 class="card-title"><a href="games-single.html">Deadpool the movie</a></h3>
+										<h3 class="card-title"><a href="games-single.html">Bayonetta 2 director draws new art as Switch speculation ensues</a></h3>
 										<ul>
 											<li><i class="fa fa-clock-o"></i> April 10, 2016</li>
 											<li><i class="fa fa-eye"></i> 780 views</li>
