updatd Tabs and Image
aDDED PICS

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 									<a href="games-single.html">
 										<img src="img/game/menu-1.jpg" alt="">
 										<div class="caption">
-											<span class="label label-warning">Adventure</span>
-											<h3>Assassin's Creed Syndicate</h3>
+											<span class="label label-danger">NEWS</span>
+											<h3>PlayStation Plus July 2017 free games</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
@@ -53,8 +53,8 @@
 									<a href="games-single.html">
 										<img src="img/game/menu-2.jpg" alt="">
 										<div class="caption">
-											<span class="label label-danger">Horror</span>
-											<h3>Last of Us Remastered</h3>
+											<span class="label label-danger">NEWS</span>
+											<h3>ANTHEM Trailer Causes Controversy</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
@@ -63,8 +63,8 @@
 									<a href="games-single.html">
 										<img src="img/game/menu-3.jpg" alt="">
 										<div class="caption">
-											<span class="label label-success">Action</span>
-											<h3>Max Payne 3</h3>
+											<span class="label label-success">Review</span>
+											<h3>Valkyria Revolution</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
@@ -73,8 +73,8 @@
 									<a href="games-single.html">
 										<img src="img/game/menu-4.jpg" alt="">
 										<div class="caption">
-											<span class="label label-danger">Stealth</span>
-											<h3>Hitman Absolution</h3>
+											<span class="label label-danger">Trailer</span>
+											<h3>The Evil Within 2 Trailer</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
@@ -86,40 +86,40 @@
 							<ul class="dropdown-menu mega-dropdown-menu category">
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-1.jpg" alt="">
+										<img src="img/game/menu-01.jpg" alt="">
 										<div class="caption">
-											<span class="label label-warning">Windows Store</span>
-											<h3>Assassin's Creed Syndicate</h3>
+											<span class="label label-warning">News</span>
+											<h3>League of Legends Autofill won't...</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-2.jpg" alt="">
+										<img src="img/game/menu-02.jpg" alt="">
 										<div class="caption">
-											<span class="label label-primary">Origin</span>
-											<h3>Last of Us Remastered</h3>
+											<span class="label label-primary">News</span>
+											<h3>The Elder Scrolls Online kicks off a </h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-3.jpg" alt="">
+										<img src="img/game/menu-03.jpg" alt="">
 										<div class="caption">
-											<span class="label label-success">itch.io</span>
-											<h3>Max Payne 3</h3>
+											<span class="label label-success">News</span>
+											<h3>Gigabyte liquid cools and overclocks...</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-4.jpg" alt="">
+										<img src="img/game/menu-04.jpg" alt="">
 										<div class="caption">
-											<span class="label label-danger">Steam</span>
-											<h3>Hitman Absolution</h3>
+											<span class="label label-danger">News</span>
+											<h3>AMD Ryzen 7 1800X...</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
@@ -131,40 +131,40 @@
 							<ul class="dropdown-menu mega-dropdown-menu category">
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-1.jpg" alt="">
+										<iframe width="350" height="182" src="https://www.youtube.com/embed/wb0aUYBm83w" frameborder="0" allowfullscreen></iframe>
 										<div class="caption">
-											<span class="label label-warning">PC</span>
-											<h3>Assassin's Creed Syndicate</h3>
+											<span class="label label-warning">Trailer</span>
+											<h3>DRAGON BALL FighterZ Trailer</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-2.jpg" alt="">
+										<img src="img/game/menu-002.jpg" alt="">
 										<div class="caption">
-											<span class="label label-primary">PS4</span>
-											<h3>Last of Us Remastered</h3>
+											<span class="label label-primary">News</span>
+											<h3>Xbox One X: Microsoft Responds To....</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-3.jpg" alt="">
+										<img src="img/game/menu-003.jpg" alt="">
 										<div class="caption">
-											<span class="label label-success">Xbox</span>
-											<h3>Max Payne 3</h3>
+											<span class="label label-success">News</span>
+											<h3>BioWare Shoots Down Rumors</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-4.jpg" alt="">
+										<img src="img/game/menu-004.jpg" alt="">
 										<div class="caption">
-											<span class="label label-danger">Steam</span>
-											<h3>Hitman Absolution</h3>
+											<span class="label label-danger">News</span>
+											<h3>More Free Xbox One And Xbox 360</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
@@ -176,40 +176,40 @@
 							<ul class="dropdown-menu mega-dropdown-menu category">
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-1.jpg" alt="">
+										<img src="img/game/menu-0001.jpg" alt="">
 										<div class="caption">
-											<span class="label label-warning">PC</span>
-											<h3>Assassin's Creed Syndicate</h3>
+											<span class="label label-warning">Review</span>
+											<h3>Monument Valley 2</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-2.jpg" alt="">
+										<img src="img/game/menu-0002.jpg" alt="">
 										<div class="caption">
-											<span class="label label-primary">PS4</span>
-											<h3>Last of Us Remastered</h3>
+											<span class="label label-primary">News</span>
+											<h3>Minecraft: Story Mode return</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-3.jpg" alt="">
+										<img src="img/game/menu-0003.jpg" alt="">
 										<div class="caption">
-											<span class="label label-success">Xbox</span>
-											<h3>Max Payne 3</h3>
+											<span class="label label-success">News</span>
+											<h3>Pokémon Go’s latest event extended</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-4.jpg" alt="">
+										<img src="img/game/menu-0004.jpg" alt="">
 										<div class="caption">
-											<span class="label label-danger">Steam</span>
-											<h3>Hitman Absolution</h3>
+											<span class="label label-danger">News</span>
+											<h3>Sega Forever makes your games F2P</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
