--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										<img src="img/game/menu-02.jpg" alt="">
 										<div class="caption">
 											<span class="label label-primary">News</span>
-											<h3>The Elder Scrolls Online kicks off a </h3>
+											<h3>The Elder Scrolls Online kicks off a... </h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
@@ -217,44 +217,44 @@
 							</ul>
 						</li>
 						<li class="dropdown mega-dropdown">
-							<a href="games.html">Nintendo Swtich</a>
+							<a href="games.html">3DS</a>
 							<ul class="dropdown-menu mega-dropdown-menu category">
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-1.jpg" alt="">
+										<img src="img/game/menu-000001.jpg" alt="">
 										<div class="caption">
-											<span class="label label-warning">PC</span>
-											<h3>Assassin's Creed Syndicate</h3>
+											<span class="label label-warning">News</span>
+											<h3>Sakamoto on Metroid: Samus Returns</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-2.jpg" alt="">
+										<img src="img/game/menu-000002.jpg" alt="">
 										<div class="caption">
-											<span class="label label-primary">PS4</span>
-											<h3>Last of Us Remastered</h3>
+											<span class="label label-primary">News</span>
+											<h3>Dutch PR company confirms Dragon Quest XI for the west</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-3.jpg" alt="">
+										<img src="img/game/menu-000003.jpg" alt="">
 										<div class="caption">
-											<span class="label label-success">Xbox</span>
-											<h3>Max Payne 3</h3>
+											<span class="label label-success">News</span>
+											<h3>Harvest Moon: Skytree Village DLC out</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-4.jpg" alt="">
+										<iframe width="350" height="182" src="https://www.youtube.com/embed/ibjx73OvDFg" frameborder="0" allowfullscreen></iframe>
 										<div class="caption">
-											<span class="label label-danger">Steam</span>
-											<h3>Hitman Absolution</h3>
+											<span class="label label-danger">Trailer</span>
+											<h3>Pokemon Ultra Sun/Ultra Moon</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
@@ -266,40 +266,85 @@
 							<ul class="dropdown-menu mega-dropdown-menu category">
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-1.jpg" alt="">
+										<img src="img/game/menu-0000001.jpg" alt="">
 										<div class="caption">
-											<span class="label label-warning">PC</span>
-											<h3>Assassin's Creed Syndicate</h3>
+											<span class="label label-warning">News</span>
+											<h3>Minecraft is coming out in Japan</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-2.jpg" alt="">
+										<img src="img/game/menu-0000002.jpg" alt="">
 										<div class="caption">
-											<span class="label label-primary">PS4</span>
-											<h3>Last of Us Remastered</h3>
+											<span class="label label-primary">News</span>
+											<h3>El Shaddai Creator Announce New RPG</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-3.jpg" alt="">
+										<img src="img/game/menu-0000003.jpg" alt="">
 										<div class="caption">
-											<span class="label label-success">Xbox</span>
-											<h3>Max Payne 3</h3>
+											<span class="label label-success">News</span>
+											<h3>Otome Visual Novels for the West</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
 								</li>
 								<li class="col-md-3">
 									<a href="games-single.html">
-										<img src="img/game/menu-4.jpg" alt="">
+										<iframe width="350" height="182" src="https://www.youtube.com/embed/cph6XMXRKzY" frameborder="0" allowfullscreen></iframe>
 										<div class="caption">
-											<span class="label label-danger">Steam</span>
-											<h3>Hitman Absolution</h3>
+											<span class="label label-danger">Trailer</span>
+											<h3>UNDERTALE -PS Vita Announce Trailer</h3>
+											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
+										</div>
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li class="dropdown mega-dropdown">
+							<a href="games.html">Nintendo Switch</a>
+							<ul class="dropdown-menu mega-dropdown-menu category">
+								<li class="col-md-3">
+									<a href="games-single.html">
+										<img src="img/game/menu-00001.jpg" alt="">
+										<div class="caption">
+											<span class="label label-warning">News</span>
+											<h3>Headup Games will publish Cave Story+ </h3>
+											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
+										</div>
+									</a>
+								</li>
+								<li class="col-md-3">
+									<a href="games-single.html">
+										<img src="img/game/menu-00002.jpg" alt="">
+										<div class="caption">
+											<span class="label label-primary">News</span>
+											<h3>Europe is getting the Neon Green/Neon </h3>
+											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
+										</div>
+									</a>
+								</li>
+								<li class="col-md-3">
+									<a href="games-single.html">
+										<img src="img/game/menu-00003.jpg" alt="">
+										<div class="caption">
+											<span class="label label-success">News</span>
+											<h3>Zelda: Breath of the Wild player clips </h3>
+											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
+										</div>
+									</a>
+								</li>
+								<li class="col-md-3">
+									<a href="games-single.html">
+										<img src="img/game/menu-00004.jpg" alt="">
+										<div class="caption">
+											<span class="label label-danger">News</span>
+											<h3>The Binding of Isaac: Afterbirth+ officially dated</h3>
 											<p>Lorem ipsum dolor sit amet, adipise elit.</p>
 										</div>
 									</a>
