--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Gameforest - Responsive Gaming HTML Theme</title>
+	<title>Contact :: GasBros Gaming Network</title>
 	
 	<!-- FAVICON -->
 	<link rel="shortcut icon" href="img/favicon.ico">
@@ -529,7 +529,7 @@
 					<li><a href="#" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Follow us on Twitter"><i class="fa fa-twitter"></i></a></li>
 					<li><a href="#" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Follow us on Facebook"><i class="fa fa-facebook"></i></a></li>
 					<li><a href="#" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Follow us on Google"><i class="fa fa-google-plus"></i></a></li>
-					<li><a href="#" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Follow us on Steam"><i class="fa fa-steam"></i></a></li>
+					<li><a href="#" class="btn btn-circle btn-social-icon" data-toggle="tooltip" title="Follow us on instagram"><i class="fa fa-instagram"></i></a></li>
 				</ul>
 				&copy; 2016 GasBros Gaming Network. All rights reserved.
 			</div>
