--- a/videos.html
+++ b/videos.html
@@ -460,7 +460,8 @@
 							<li><a href="#"><i class="ion-playstation"></i> Playstation 4</a></li>
 							<li><a href="#"><i class="ion-steam"></i> Steam</a></li>
 							<li><a href="#"><i class="ion-xbox"></i> Xbox One</a></li>
-							<li><a href="#"><i class="ion-desktop"></i> PC</a></li>
+							<li><a href="#"><i class="fa fa-gamepad"></i>Nintendo</a></li>
+							<li><a href="#"><i class="ion-laptop"></i> PC</a></li>
 						</ul>
 					</div>
 					
